@@ -1,0 +1,41 @@
+digraph
+{
+  edge [arrowhead = vee, arrowsize = .6]
+  node [fontsize = 12, fillcolor = cadetblue1, shape = circle, style = "filled,rounded", height = 0.4, width = 0.4, fixedsize = true]
+
+  3 [label="|"]
+  6 [label="a"]
+  7 [label="b"]
+  5 [label="+"]
+  5 -> 6
+  5 -> 7
+  4 [label="."]
+  4 -> 5
+  4 -> 5
+  4 -> 5
+  3 -> 4
+  9 [label="x"]
+  8 [label="*"]
+  8 -> 9
+  3 -> 8
+  10 [label="|"]
+  13 [label="c"]
+  14 [label="d"]
+  12 [label="+"]
+  12 -> 13
+  12 -> 14
+  11 [label="."]
+  11 -> 12
+  11 -> 12
+  10 -> 11
+  16 [label="y"]
+  15 [label="*"]
+  15 -> 16
+  10 -> 15
+  2 [label="+"]
+  2 -> 3
+  2 -> 10
+  1 [label="."]
+  1 -> 2
+  1 -> 2
+}
