@@ -1,0 +1,43 @@
+digraph
+{
+  edge [arrowhead = vee, arrowsize = .6]
+  node [fontsize = 12, fillcolor = cadetblue1, shape = circle, style = "filled,rounded", height = 0.4, width = 0.4, fixedsize = true]
+
+  3 [label="|"]
+  7 [label="a"]
+  8 [label="b"]
+  6 [label="+"]
+  6 -> 7
+  6 -> 8
+  5 [label="."]
+  5 -> 6
+  5 -> 6
+  4 [label="."]
+  4 -> 5
+  4 -> 6
+  3 -> 4
+  10 [label="x"]
+  9 [label="*"]
+  9 -> 10
+  3 -> 9
+  11 [label="|"]
+  14 [label="c"]
+  15 [label="d"]
+  13 [label="+"]
+  13 -> 14
+  13 -> 15
+  12 [label="."]
+  12 -> 13
+  12 -> 13
+  11 -> 12
+  17 [label="y"]
+  16 [label="*"]
+  16 -> 17
+  11 -> 16
+  2 [label="+"]
+  2 -> 3
+  2 -> 11
+  1 [label="."]
+  1 -> 2
+  1 -> 2
+}
