@@ -212,6 +212,10 @@ EXTRA_DIST +=                                           \
   %D%/expression.dir/de-bruijn-associative-physical.gv  \
   %D%/expression.dir/de-bruijn-trivial-logical.gv       \
   %D%/expression.dir/de-bruijn-trivial-physical.gv      \
+  %D%/expression.dir/lan-lan-associative-logical.gv     \
+  %D%/expression.dir/lan-lan-associative-physical.gv    \
+  %D%/expression.dir/lan-lan-trivial-logical.gv         \
+  %D%/expression.dir/lan-lan-trivial-physical.gv        \
   %D%/factory.dir/cerny-6.gv                            \
   %D%/factory.dir/clique-a-4.gv                         \
   %D%/factory.dir/de-bruijn-2.gv                        \
